test/sc++/error/builtin-args.scpp
../../scc/error/builtin-args.sc